Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Tue Oct  4 17:12:52 1994  Theodore Y. Ts'o  (tytso@dcl)

	* client.c (tgt_keyproc): Add widen.h and narrow.h around
		declaration so that argument types are widened.

Thu Sep 29 22:48:20 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable when libraries change

Wed Sep 14 21:47:00 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Fixed stupid typo (uusrever) in the install target.